sumo/tests/sumo/errors/network/edge/lane/root__edge__lane#maxspeed__false12/errors.sumo
Error: Attribute 'maxspeed' in definition of lane '1_1' is not a real number.
Error: An unknown lane ('1_1') was tried to be set as incoming to junction '2'.
Error: Trying to close connections of an unknown lane ('1_1').
Quitting (on error).
